--- a/phone-a-friend-web/package.json
+++ b/phone-a-friend-web/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
+    "@welldone-software/why-did-you-render": "^4.0.6",
     "firebase": "^7.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
