--- a/phone-a-friend-web/package.json
+++ b/phone-a-friend-web/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-toastify": "^5.5.0",
     "sanitize.css": "^11.0.0",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2",
