added aliases to firebase environments and switched default to be the dev environment

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "phoneafriend-airtable"
+    "default": "phoneafriend-dev",
+    "PROD": "phoneafriend-us"
   }
 }
